--- a/CustomerRelationsManagement.Web/Views/_ViewImports.cshtml
+++ b/CustomerRelationsManagement.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CustomerRelationsManagement.Web
 @using CustomerRelationsManagement.Web.Models
+@using CustomerRelationsManagement.Web.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
