Newest Working Version

--- a/CustomerRelationsManagement.Web/Views/Client/Details.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Client/Details.cshtml
@@ -38,5 +38,5 @@
 <br/>
 <div>
     <a asp-action="Index" class="btn btn-dark">Back to List</a>
-    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@Model?.Id">Edit</a>
 </div>
