--- a/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - CustomerRelationsManagement.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Customer Relations Management By Ryan Perez - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
