--- a/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using CustomerRelationsManagement.Web.Constants;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -40,16 +41,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Activities</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Manage
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" asp-controller="Client" asp-action="Index">Clients</a></li>
-                                <li><a class="dropdown-item" href="#">Leads</a></li>
-                                <li><a class="dropdown-item" href="#">Projects</a></li>
-                            </ul>
-                        </li>
+                        @if (User.IsInRole(Roles.Administrator))
+                        {
+                            <li class="nav-item dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Manage
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-controller="Client" asp-action="Index">Clients</a></li>
+                                    <li><a class="dropdown-item" href="#">Leads</a></li>
+                                    <li><a class="dropdown-item" href="#">Projects</a></li>
+                                </ul>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
