--- a/CustomerRelationsManagement.Web/Views/_ViewImports.cshtml
+++ b/CustomerRelationsManagement.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CustomerRelationsManagement.Web
 @using CustomerRelationsManagement.Web.Models
 @using CustomerRelationsManagement.Web.Data
+@using CustomerRelationsManagement.Web.Constants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
