--- a/CustomerRelationsManagement.Web/Views/Client/Details.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Client/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details of @Model.Name</h1>
+<h1>Details of Client @Model.Name</h1>
 
 <div>
     <hr />
