--- a/CustomerRelationsManagement.Web/Views/LeaveTypes/Index.cshtml
+++ b/CustomerRelationsManagement.Web/Views/LeaveTypes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CustomerRelationsManagement.Web.Models.ClientViewModel>
+﻿@model IEnumerable<CustomerRelationsManagement.Web.Models.LeaveTypeViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -16,13 +16,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CompanyName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone)
+                @Html.DisplayNameFor(model => model.DefaultDays)
             </th>
             <th></th>
         </tr>
@@ -34,42 +28,32 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CompanyName)
+                @Html.DisplayFor(modelItem => item.DefaultDays)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-            <td>
-                    <button data-id="@item.Id" class="btn btn-primary dealBtn" type="button">Deal</button>
+                <td>
+                    <button data-id="@item.Id" class="btn btn-primary allocateBtn" type="button">Allocate Leave</button>
                     <a class="btn btn-warning text-white" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i></a>
                     <a class="btn btn-info text-white" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-info-circle"></i></a>
                     <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button"><i class="far fa-trash-alt"></i></button>
-            </td>
+                </td>
         </tr>
 }
     </tbody>
 </table>
 
 <form id="deleteFrom" asp-action="Delete">
-    <input type="hidden" id="clientId" name="Id" /> 
+    <input type="hidden" id="leaveTypeId" name="Id" />
 </form>
 
-<form id="dealForm" asp-action="CreateDeal">
-    <input type="hidden" id="clientId" name="Id" />
+<form id="allocationForm" asp-action="AllocateLeave">
+    <input type="hidden" id="leaveTypeIdAllocate" name="Id" />
 </form>
-
-<!-- name is used for serverside stuff like php or in this case c# or a class, id is used for javascript or jquery when
-you want to target a element -->
 
 @section Scripts {
     <script>
-        $(function(){
-            $('.table').DataTable();
+        $(function () {
 
-            $('.deleteBtn').click(function(e) {
+            $('.deleteBtn').click(function (e) {
                 swal({
                     title: "Are you sure?",
                     text: "Are you sure you want to delete this record?",
@@ -78,20 +62,20 @@ you want to target a element -->
                     dangerMode: true
 
                 }).then((confirm) => {
-                        if(confirm){
-                            var btn = $(this);
-                            var id = btn.data("id");
-                            $('#clientId').val(id);
-                            $('#deleteFrom').submit();
-                        
-                        }
-                    });
+                    if (confirm) {
+                        var btn = $(this);
+                        var id = btn.data("id");
+                        $('#leaveTypeId').val(id);
+                        $('#deleteFrom').submit();
+
+                    }
+                });
             }); //watching for a class called deleteBtn
 
-            $('.dealBtn').click(function (e) {
+            $('.allocateBtn').click(function (e) {
                 swal({
                     title: "Are you sure?",
-                    text: "Are you sure you want to create this deal for all employees?",
+                    text: "Are you sure you want to create this allocation for all employees?",
                     icon: "warning",
                     buttons: true,
                     dangerMode: true
@@ -100,8 +84,8 @@ you want to target a element -->
                     if (confirm) {
                         var btn = $(this);
                         var id = btn.data("id");
-                        $('#clientId').val(id);
-                        $('#dealForm').submit();
+                        $('#leaveTypeIdAllocate').val(id);
+                        $('#allocationForm').submit();
 
                     }
                 });
