--- a/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
@@ -33,24 +33,27 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Clients</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Client" asp-action="Index">Clients</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Deals</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Deal" asp-action="Index">Deals</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Activities</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="LeaveTypes" asp-action="Index">Staff</a>
                         </li>
                         @if (User.IsInRole(Roles.Administrator))
                         {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Employees" asp-action="Index">Employees</a>
+                            </li>
                             <li class="nav-item dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href = "#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Manage
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" asp-controller="Client" asp-action="Index">Clients</a></li>
-                                    <li><a class="dropdown-item" href="#">Leads</a></li>
-                                    <li><a class="dropdown-item" href="#">Projects</a></li>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a></li>
+                                    <li><a class="dropdown-item" href="#">Leave Allocations</a></li>
+                                    <li><a class="dropdown-item" href="#">Leave Requests</a></li>
                                 </ul>
                             </li>
                         }
@@ -77,6 +80,11 @@
     <script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.5/js/dataTables.bootstrap5.min.js"></script>
     <script src="~/lib/sweetalert/sweetalert.min.js"></script>
+    <script>
+        $(function() {
+            $('.table').DataTable();
+        });
+    </script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
