Added Department and Position variables for each User, also adding functionality to create Positions, and assign a Department.

--- a/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" asp-controller="Employees" asp-action="Index">Employees</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Positions" asp-action="Index">Positions</a></li>
                                     <li><a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a></li>
                                     <li><a class="dropdown-item" asp-controller="LeaveRequests" asp-action="Index">Leave Requests</a></li>
                                 </ul>
