--- a/CustomerRelationsManagement.Web/Views/Employees/Index.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Employees/Index.cshtml
@@ -21,6 +21,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.DateJoined)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Position)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Department)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -40,7 +46,15 @@
                 @Html.DisplayFor(modelItem => item.DateJoined)
             </td>
             <td>
-                <a asp-action="ViewAllocations" class="btn btn-primary" asp-route-id="@item.Id">View Allocations</a>
+                @Html.DisplayFor(modelItem => item.Position.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Department)
+            </td>
+            <td>
+                <a asp-action="ViewAllocations" class="btn btn-sm btn-primary" asp-route-id="@item.Id">View Allocations</a>
+                <a asp-action="AssignDepartment" class="btn btn-sm btn-secondary" asp-route-id="@item.Id">Assign Position</a>
+                <a asp-action="AssignDepartment" class="btn btn-sm btn-dark" asp-route-id="@item.Id">Assign Department</a>
             </td>
         </tr>
 }
