--- a/CustomerRelationsManagement.Web/Views/Employees/ViewAllocations.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Employees/ViewAllocations.cshtml
@@ -27,6 +27,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Position)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Position.Name)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateJoined)
         </dt>
