--- a/CustomerRelationsManagement.Web/Views/Positions/Details.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Positions/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Position Details</h1>
 
 <div>
     <hr />
@@ -33,5 +33,4 @@
 <div>
     <a asp-action="Index" class="btn btn-dark">Back to List</a>
     <a asp-action="Edit" class="btn btn-warning" asp-route-id="@Model?.Id">Edit</a>
-    
 </div>
