--- a/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Shared/_Layout.cshtml
@@ -56,10 +56,12 @@
                                     Admin Dashboard
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-controller="Announcements" asp-action="Index">Announcements</a></li>
                                     <li><a class="dropdown-item" asp-controller="Employees" asp-action="Index">Employees</a></li>
                                     <li><a class="dropdown-item" asp-controller="Positions" asp-action="Index">Positions</a></li>
                                     <li><a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a></li>
                                     <li><a class="dropdown-item" asp-controller="LeaveRequests" asp-action="Index">Leave Requests</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Projects" asp-action="Index">Projects</a></li>
                                 </ul>
                             </li>
                         }
