--- a/CustomerRelationsManagement.Web/wwwroot/css/site.css
+++ b/CustomerRelationsManagement.Web/wwwroot/css/site.css
@@ -20,3 +20,8 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+a {
+    color: inherit; /* Inherit the color from parent element */
+    text-decoration: none; /* Remove underline */
+}
