--- a/CustomerRelationsManagement.Web/Views/Positions/Edit.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Positions/Edit.cshtml
@@ -1,15 +1,14 @@
 ﻿@model CustomerRelationsManagement.Web.Models.PositionViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Position";
 }
 
-<h1>Edit</h1>
+<h1>Edit Position</h1>
 
-<h4>Position</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -21,7 +20,7 @@
             <br />
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <br />
@@ -32,13 +31,9 @@
             </div>
             <br />
             <div class="form-group">
+                <a asp-action="Index" class="btn btn-dark">Back to List</a>
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
