--- a/CustomerRelationsManagement.Web/Views/ProjectTasks/Create.cshtml
+++ b/CustomerRelationsManagement.Web/Views/ProjectTasks/Create.cshtml
@@ -1,27 +1,17 @@
-﻿@model CustomerRelationsManagement.Web.Models.ProjectTaskViewModel
+﻿@model CustomerRelationsManagement.Web.Models.ProjectTaskCreateViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Task";
 }
 
-<h1>Create</h1>
+<h1>Create Task</h1>
 
 <h4>ProjectTaskViewModel</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="EmployeeId" class="control-label"></label>
-                <input asp-for="EmployeeId" class="form-control" />
-                <span asp-validation-for="EmployeeId" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsComplete" /> @Html.DisplayNameFor(model => model.IsComplete)
-                </label>
-            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -33,27 +23,26 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="TaskPriority" class="control-label"></label>
-                <select asp-for="TaskPriority" class="form-control"></select>
-                <span asp-validation-for="TaskPriority" class="text-danger"></span>
+                @Html.LabelFor(model => model.TaskPriority)
+                @Html.DropDownListFor(model => model.TaskPriority, Enum.GetValues(typeof(TaskPriority)).Cast<TaskPriority>().Select(p =>
+                new SelectListItem
+                {
+                Text = p.ToString(),
+                Value = p.ToString()
+                }), "Select Priority", new { @class = "form-control" })
             </div>
             <div class="form-group">
                 <label asp-for="DateDue" class="control-label"></label>
                 <input asp-for="DateDue" class="form-control" />
                 <span asp-validation-for="DateDue" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
+                <a asp-controller="Home" asp-action="ProjectDetails" asp-route-projectId="@Model?.ProjectId" class="btn btn-dark">Back to Project</a>
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            @Html.HiddenFor(model => model.ProjectId)
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
