--- a/CustomerRelationsManagement.Web/Views/ProjectTasks/Details.cshtml
+++ b/CustomerRelationsManagement.Web/Views/ProjectTasks/Details.cshtml
@@ -1,60 +1,62 @@
 ﻿@model CustomerRelationsManagement.Web.Models.ProjectTaskViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Task Details";
 }
 
-<h1>Details</h1>
+<h1>Task Details</h1>
 
 <div>
-    <h4>ProjectTaskViewModel</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EmployeeId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EmployeeId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsComplete)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsComplete)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.TaskPriority)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.TaskPriority)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateDue)
+        <dt class = "col-sm-5">
+            @Html.DisplayNameFor(model => model.Employee)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateDue)
+        <dd class = "col-sm-7">
+            @Html.DisplayFor(model => model.Employee.Firstname)
         </dd>
+        <dt class="col-sm-5">
+            @Html.DisplayNameFor(model => model.IsComplete)
+        </dt>
+        @if (Model.IsComplete)
+        {
+            <dd class="col-sm-7">Complete</dd>
+        }
+        else
+        {
+            <dd class="col-sm-7">In-Progress</dd>
+        }
+        @if(Model.DateDue != null)
+        {
+            <dt class="col-sm-5">
+                @Html.DisplayNameFor(model => model.DateDue)
+            </dt>
+            <dd class="col-sm-7">
+                @Html.DisplayFor(model => model.DateDue)
+            </dd>
+        }
+        
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Home" asp-action="ProjectDetails" asp-route-projectId="@Model?.ProjectId" class="btn btn-dark">Back to Project</a>
+    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@Model?.Id">Edit</a>
 </div>
