--- a/CustomerRelationsManagement.Web/Views/ProjectTasks/Edit.cshtml
+++ b/CustomerRelationsManagement.Web/Views/ProjectTasks/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CustomerRelationsManagement.Web.Models.ProjectTaskViewModel
+﻿@model CustomerRelationsManagement.Web.Models.ProjectTaskEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,49 +13,60 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="EmployeeId" class="control-label"></label>
-                <input asp-for="EmployeeId" class="form-control" />
-                <span asp-validation-for="EmployeeId" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsComplete" /> @Html.DisplayNameFor(model => model.IsComplete)
-                </label>
-            </div>
+            <input type="hidden" asp-for="ProjectId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
-                <span asp-validation-for="ProjectId" class="text-danger"></span>
+                <label asp-for="IsComplete" class="control-label"></label>
+                <div>
+                    <button type="button" class="btn btn-success" id="completeBtn">Complete</button>
+                    <button type="button" class="btn btn-danger" id="incompleteBtn">Incomplete</button>
+                </div>
             </div>
+            <input type="hidden" asp-for="IsComplete" id="isCompleteField" />
+            <br />
             <div class="form-group">
-                <label asp-for="TaskPriority" class="control-label"></label>
-                <select asp-for="TaskPriority" class="form-control"></select>
-                <span asp-validation-for="TaskPriority" class="text-danger"></span>
+                @Html.LabelFor(model => model.TaskPriority)
+                @Html.DropDownListFor(model => model.TaskPriority, Enum.GetValues(typeof(TaskPriority)).Cast<TaskPriority>().Select(p =>
+                new SelectListItem
+                {
+                Text = p.ToString(),
+                Value = p.ToString()
+                }), "Select Priority", new { @class = "form-control" })
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="DateDue" class="control-label"></label>
                 <input asp-for="DateDue" class="form-control" />
                 <span asp-validation-for="DateDue" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
+                <a asp-controller="Home" asp-action="ProjectDetails" asp-route-projectId="@Model?.ProjectId" class="btn btn-dark">Back to Project</a>
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<script>
+    $(document).ready(function () {
+        $("#completeBtn").click(function () {
+            $("#isCompleteField").val("true");
+        });
 
+        $("#incompleteBtn").click(function () {
+            $("#isCompleteField").val("false");
+        });
+    });
+</script>
