--- a/CustomerRelationsManagement.Web/Views/Employees/ViewAllocations.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Employees/ViewAllocations.cshtml
@@ -20,7 +20,7 @@
         {
             <li class="list-group-item">
                 <div class="row">
-                    <div class="col"><h6>@allocation.LeaveType.Name</h6></div>
+                    <div class="col"><h6>@allocation.LeaveType.Name?</h6></div>
                     <div class="col">
                         <button type="button" class="btn btn-primary">
                             Allocated Days <span class="badge bg-secondary">@allocation.LeaveType.DefaultDays</span>
