--- a/CustomerRelationsManagement.Web/Views/Home/Index.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Home/Index.cshtml
@@ -14,4 +14,7 @@
         <p>Get started by registering so you can start <strong>exploring</strong> the various functionalities of the project.</p>
         <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/ryan-ray-perez/" role="button">Learn more about the developer <i class="ti ti-user fs-11"></i></a>
     </div>
+    <div class="py-6 px-6 text-center">
+        <p class="margin-top-10 mb-0 fs-4">Design by <a href="https://adminmart.com/" target="_blank" class="pe-1 text-primary text-decoration-underline">AdminMart.com</a> & Astronaut Icon by <a href="https://free3dicon.com" target="_blank" class="pe-1 text-primary text-decoration-underline">free3dicon.com</a></p>
+    </div>
 </div>
