--- a/CustomerRelationsManagement.Web/Views/LeaveRequests/MyLeave.cshtml
+++ b/CustomerRelationsManagement.Web/Views/LeaveRequests/MyLeave.cshtml
@@ -18,7 +18,7 @@
         {
             <li class="list-group-item">
                 <div class="row">
-                    <div class="col"><h6>@allocation.LeaveType.Name</h6></div>
+                    <div class="col"><h6>@allocation.LeaveType.Name?</h6></div>
                     <div class="col">
                         <button type="button" class="btn btn-primary rounded-3">
                             Allocated Days <span class="badge bg-secondary rounded-3">@allocation.LeaveType.DefaultDays</span>
