--- a/CustomerRelationsManagement.Web/Views/Projects/Create.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Projects/Create.cshtml
@@ -32,7 +32,7 @@
                         <label for="employee_@employee.Id">@employee.FirstName @employee.LastName</label>
                     </span>
                 }
-                <span asp-validation-for="EmployeeIds" class="text-danger"></span>
+                <span asp-validation-for="EmployeeIds?" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
