--- a/CustomerRelationsManagement.Web/Views/Shared/_AdminLayout.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Shared/_AdminLayout.cshtml
@@ -98,14 +98,6 @@
                                     <span class="hide-menu">EMPLOYEE TOOLS FOR USER</span>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a class="sidebar-link" asp-controller="Home" asp-action="Dashboard" aria-expanded="false">
-                                        <span>
-                                            <i class="ti ti-notebook"></i>
-                                        </span>
-                                        <span class="hide-menu">Projects</span>
-                                    </a>
-                                </li>
-                                <li class="sidebar-item">
                                     <a class="sidebar-link" asp-controller="LeaveRequests" asp-action="Create" aria-expanded="false">
                                         <span>
                                             <i class="ti ti-clock-edit"></i>
@@ -140,14 +132,6 @@
                                 <li class="nav-small-cap">
                                     <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
                                     <span class="hide-menu">EMPLOYEE TOOLS</span>
-                                </li>
-                                <li class="sidebar-item">
-                                    <a class="sidebar-link" asp-controller="Home" asp-action="Dashboard" aria-expanded="false">
-                                        <span>
-                                            <i class="ti ti-notebook"></i>
-                                        </span>
-                                        <span class="hide-menu">Projects</span>
-                                    </a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a class="sidebar-link" asp-controller="LeaveRequests" asp-action="Create" aria-expanded="false">
@@ -244,7 +228,7 @@
                                     <li class="nav-item dropdown">
                                         <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                                            aria-expanded="false">
-                                            <img src="~/assets/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
+                                            <img src="~/assets/user-1.png" alt="" width="35" height="35" class="rounded-circle">
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
                                             <div class="message-body">
@@ -271,6 +255,7 @@
                 <div class="container-fluid">
                     <div class="row">@RenderBody()</div>
                 </div>
+                
             </div>
         </div>
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
