--- a/CustomerRelationsManagement.Web/Views/Home/ProjectDetails.cshtml
+++ b/CustomerRelationsManagement.Web/Views/Home/ProjectDetails.cshtml
@@ -9,9 +9,7 @@
         display: flex;
         align-items: center;
         padding: 10px;
-        border-bottom: 1px solid #ddd;Team MembersTeam Members
-
-
+        border-bottom: 1px solid #ddd;
     }
 
         .team-member img {
