--- a/CustomerRelationsManagement.Web/css/sb-admin-2.css
+++ b/CustomerRelationsManagement.Web/css/sb-admin-2.css
@@ -79,6 +79,10 @@ hr {
   overflow: visible;
 }
 
+.margin-top-10 {
+    margin-top: 5rem;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
