--- a/CustomerRelationsManagement.Web/wwwroot/css/site.css
+++ b/CustomerRelationsManagement.Web/wwwroot/css/site.css
@@ -25,3 +25,7 @@ a {
     color: inherit; /* Inherit the color from parent element */
     text-decoration: none; /* Remove underline */
 }
+
+.margin-top-10 {
+    margin-top: 50rem;
+}
